ajout collapse + correction

--- a/src/components/Thumb/Thumb.scss
+++ b/src/components/Thumb/Thumb.scss
@@ -5,13 +5,24 @@
     height: 340px;
     border-radius: 10px;
     background-color: $primary-color;
-    display: flex;
-    h2{
+    opacity: 90%;
+    position: relative;
+
+    h2 {
         font-weight: 500;
         font-size: 18px;
         color: #FFFFFF;
-        display: flex;
-        align-items: flex-end;
         padding: 20px;
+        position: absolute;
+        bottom: 0px;
+        text-align: left;
+    }
+
+    &__gradient {
+        position: absolute;
+        border-radius: 10px;
+        width: 340px;
+        height: 340px;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
     }
 }
